# glossary-poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: deprecate_term.yml  edit_term.yml  new_term.yml
.github/workflows/: deprecate_term_pr.yml  edit_term_pr.yml  new_term_pr.yml  publish.yml  validate.yml
schema/: term.schema.json
scripts/: generate.py  template.html  validate.py
terms/: GRID_OWNER.yml  HYDRO.yml  IMBALANCE_SETTLEMENT.yml  INSTALLED_CAPACITY.yml  INTERVAL_VALUE.yml  METERING_VALUE.yml  MP.yml  PROD_GROUP.yml  QUALITY_CODE.yml  RECON.yml  SETTLEMENT_TYPE.yml  SOLAR.yml
