[project]
name = "glossary-poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
    "pre-commit>=4.0",
]

[project.scripts]
generate = "scripts.generate:main"
